Fixed header spacing

--- a/src/_includes/assets/css/inline.css
+++ b/src/_includes/assets/css/inline.css
@@ -1,9 +1,9 @@
-:root {
-	--turkey: #FFF0EB;
-	--white: white;
-	--blue: blue;
-}
+
 
 *, *:before, *:after {
   box-sizing: border-box;
+}
+
+.maintitle {
+	margin-left: 6rem;
 }
